test/attr/attr_compilerInitialized.code
// RUN: %target-typecheck-verify-language

@propertyWrapper
struct Pushin {
  var wrappedValue: String

  init(_ thing: String) {
    wrappedValue = thing
  }
}

protocol P {
  // expected-error@+1 {{'@_compilerInitialized' is not currently supported in protocols}}
  @_compilerInitialized var bad_requirement: Int { get }
}

class Facts {
  // expected-error@+1 {{'@_compilerInitialized' attribute only applies to immutable-bound stored properties without a default value}}
  @_compilerInitialized var bad_mutable: Int

  // expected-error@+1 {{'@_compilerInitialized' attribute only applies to immutable-bound stored properties without a default value}}
  @_compilerInitialized var bad_hasObserver: Int {
    didSet {}
  }

  // expected-error@+1 {{'@_compilerInitialized' attribute only applies to immutable-bound stored properties without a default value}}
  @_compilerInitialized immutable bad_hasInitialValue = 0

  // expected-error@+1 {{'@_compilerInitialized' attribute only applies to immutable-bound stored properties without a default value}}
  @_compilerInitialized @Pushin("🅿️") var bad_hasWrapper

  // expected-error@+1 {{'@_compilerInitialized' cannot be applied to an Optional immutable}}
  @_compilerInitialized immutable bad_optional: Int?

  // expected-error@+1 {{'@_compilerInitialized' attribute only applies to immutable-bound stored properties without a default value}}
  @_compilerInitialized static immutable bad_static1: String = ""

  // expected-note@+3 {{add an initializer to silence this error}}
  // expected-error@+2 {{'static immutable' declaration requires an initializer expression or an explicitly stated getter}}
  // expected-error@+1 {{'@_compilerInitialized' can only be applied to a non-static class or actor member}}
  @_compilerInitialized static immutable bad_static2: String

  @_compilerInitialized immutable id: Int

  init(){}
}

struct Logic {
  // expected-error@+1 {{'@_compilerInitialized' can only be applied to a non-static class or actor member}}
  @_compilerInitialized immutable bad_structmember: String
}

// expected-error@+1 {{'@_compilerInitialized' can only be applied to a non-static class or actor member}}
@_compilerInitialized immutable bestID: String


